<resources>
    <string name="app_name">DocSearch</string>
    <string name="login">Login</string>
    <string name="empty_error">Field can\'t be empty</string>
    <string name="usernameCapitalized">Username</string>
    <string name="passwordCapitalized">Password</string>
    <string name="base_url">https://api.uvita.eu/</string>
    <string name="login_url">https://api.uvita.eu/oauth/</string>
    <string name="doctor_url">https://api.uvita.eu/api/users/me/</string>
    <string name="image_url">https://api.uvita.eu/api/users/me/files/</string>
    <string name="search">search</string>
    <string name="bearer">Bearer </string>

    <string name="url_serializable_tag">300261114</string>

    <string name="login_fail">Failure to login. Check your credentials or try again later</string>
    <string name="patience_from_zhou">Almost there</string>
    <string name="doing_that">I will do that for you</string>
    <string name="username">username</string>
    <string name="default_email">rowanto@uvita.eu</string>
    <string name="password">password</string>
    <string name="default_password">88888888</string>
    <string name="grant_type">grant_type</string>
    <string name="token">token</string>
    <string name="doctors">doctors</string>
    <string name="lat">lat</string>
    <string name="lng">lng</string>
    <string name="search_doctor_title">Search for a doctor</string>
    <string name="doctor_image">Doctor Image</string>
    <string name="authorization">Authorization</string>

</resources>
